# crichton

./: .gitignore  AGENTS.md  AGENTS.org  AGENT_SPEC.md  AGENT_SPEC.org  CHANGELOG.org  CLAUDE.md  DEPLOYMENT.org  DEVELOPER.org  FEATURE_REQUESTS.org  ISSUES.md  Makefile  PROMPTS_FOR_CRICHTON.org  README.md  README.org  ROADMAP.org  crichton-client.asd  crichton-tui.asd  crichton.asd  crichton.lisp  deploy-skill-registry.sh  jpnmqoh26qc9bqcnhtivumocdprqktun.darc  lpaschaiaoreclqpi0anaisveq3ohtce.darc  manifest  mejdd29bavuoqffakdu6pmnsctvehqbl.darc  package.lisp  review_checklist.json
.beads/: beads.left.jsonl  beads.left.meta.json  config.yaml  interactions.jsonl  issues.jsonl  metadata.json
agent/: loop.lisp  sanitize.lisp  tools-data.lisp  tools-ops.lisp  tools-register.lisp  tools-system.lisp  tools.lisp
assets/: crichton.service  start-daemon.sh
channels/: discord.lisp  manager.lisp  protocol.lisp
cli/: main.lisp  remote.lisp
client/: client.lisp  package.lisp
config/: loader.lisp  paths.lisp  util.lisp
credentials/: backend-age-file.lisp  mediator.lisp  protocol.lisp
crypto/: age.lisp  wipe.lisp
daemon/: lifecycle.lisp  notifications.lisp  rpc-server.lisp  runner-client.lisp  swank.lisp
docs/: CAPABILITIES.org  DESIGN-skill-registry.org  DEVELOPER.org  ORGMODE-REVIEW.org  ORGMODE-SKILL-DESIGN.org  ROADMAP.org  RSS-FILTER-SKILL.org  RSS-PERSISTENCE-SUMMARY.txt  SKILL_DEVELOPMENT.org  SKILL_QUICKSTART.org  USER-GUIDE.org  (+3 more)
examples/skills/rss-filter/: Cargo.toml  README.org  rss_filter.wasm  skill.toml
examples/skills/rss-filter/src/: lib.rs
(+85 files in other folders)
